# VulkanApps

./: .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  VulkanApps.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Apps/: App.vcxproj  App.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MeshDebugRendering.vcxproj  MeshDebugRendering.vcxproj.filters  VoxelChunk.cpp  VoxelChunk.h  VoxelRendering.vcxproj  VoxelRendering.vcxproj.filters  cmake_install.cmake
Apps/App/: App.cpp  App.h  Main.cpp
Apps/MeshDebugRendering/: App.cpp  App.h
Apps/VoxelRendering/: Main.cpp  VulkanApp.cpp  VulkanApp.h
Base/: AABox.h  Array2D.h  Array3D.h  Base.vcxproj  Base.vcxproj.filters  CMakeLists.txt  Camera.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  MathExtension.cpp  MathExtension.h  Ray.cpp  Ray.h  VertexTypes.cpp  VertexTypes.h  cmake_install.cmake
DataHandling/: CMakeLists.txt  DataHandling.vcxproj  DataHandling.vcxproj.filters  Helper.cpp  Helper.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  Mesh.cpp  Mesh.h  MeshShapes.cpp  MeshShapes.h  cmake_install.cmake
DebugUI/: Button.cpp  Button.h  CMakeLists.txt  DebugArray.cpp  DebugArray.h  DebugShaderEditor.cpp  DebugShaderEditor.h  DebugUI.cpp  DebugUI.h  DebugUI.vcxproj  DebugUI.vcxproj.filters  DebugUIElements.cpp  DebugUIElements.h  DebugWindow.cpp  DebugWindow.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  imgui_impl_vulkan.h
Engine/: AccelerationStructure.cpp  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.h  DescriptorPool.cpp  DescriptorSet.h  Engine.sln  Engine.vcxproj  Engine.vcxproj.filters  RenderPass.cpp  VertexBuffer.h  VertexLayout.cpp  VulkanBaseApp.cpp  VulkanBaseApp.h  VulkanDevice.cpp  VulkanSwapchain.cpp  Window.cpp  Window.h  base.vcxproj  base.vcxproj.filters  cmake_install.cmake
Engine/Engine/: Buffer.cpp  Buffer.h  Camera.h  CommandPool.cpp  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Engine.vcxproj  Engine.vcxproj.filters  FrameBuffer.cpp  GraphicsPipeline.cpp  GraphicsPipeline.h  Helper.cpp  Helper.h  HybridPipeline.vcxproj  HybridPipeline.vcxproj.filters  Platform.h  RaytracingGeometry.cpp  RaytracingGeometry.h  RenderPass.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexLayout.cpp  VertexLayout.h  VulkanApp.cpp  VulkanApp.h  VulkanBaseApp.cpp  VulkanDevice.cpp  VulkanDevice.h  VulkanHelpers.cpp  VulkanSwapchain.cpp  Window.cpp  Window.h  WindowWin32.cpp
Engine/Shaders/: Perspective.vert  Perspective.vert.spv  generate-spirv.bat
Libs/glfw/glfw-3.3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
Libs/glfw/glfw-3.3/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  boing.vcxproj  boing.vcxproj.filters  cmake_install.cmake  gears.vcxproj  gears.vcxproj.filters  heightmap.vcxproj  heightmap.vcxproj.filters  offscreen.vcxproj  offscreen.vcxproj.filters  particles.vcxproj  particles.vcxproj.filters  sharing.vcxproj  sharing.vcxproj.filters  simple.vcxproj  simple.vcxproj.filters  splitview.vcxproj  splitview.vcxproj.filters  wave.vcxproj  wave.vcxproj.filters
Libs/glfw/glfw-3.3/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters
Libs/glfw/glfw-3.3/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  clipboard.vcxproj  clipboard.vcxproj.filters  cmake_install.cmake  cursor.vcxproj  cursor.vcxproj.filters  empty.vcxproj  empty.vcxproj.filters  events.vcxproj  events.vcxproj.filters  gamma.vcxproj  gamma.vcxproj.filters  glfwinfo.vcxproj  glfwinfo.vcxproj.filters  icon.vcxproj  icon.vcxproj.filters  iconify.vcxproj  iconify.vcxproj.filters  inputlag.vcxproj  inputlag.vcxproj.filters  joysticks.vcxproj  joysticks.vcxproj.filters  monitors.vcxproj  monitors.vcxproj.filters  msaa.vcxproj  msaa.vcxproj.filters  opacity.vcxproj  opacity.vcxproj.filters  reopen.vcxproj  reopen.vcxproj.filters  tearing.vcxproj  tearing.vcxproj.filters  threads.vcxproj  threads.vcxproj.filters  (+8 more)
Libs/vulkan/: vulkan_core.h
Shaders/: Color.frag  Color.frag.spv  Compile.bat  InstancedPerspective.vert  InstancedPerspective.vert.spv  NoInstancePerspective.vert  NoInstancePerspective.vert.spv  Raymarched.frag  Raymarched.frag.spv  Raymarched.vert  Raymarched.vert.spv
Shaders/MeshDebugRendering/: ColorNormalPerspective.vert  ColorNormalPerspective.vert.spv  ColorPerspective.vert  ColorPerspective.vert.spv  Diffuse.frag  Diffuse.frag.spv  Normal.frag  Normal.frag.spv  NormalPerspective.vert  NormalPerspective.vert.spv  UV.frag  UV.frag.spv  UVPerspective.vert  UVPerspective.vert.spv
Shaders/Particles/: generate-spirv.bat  particle.frag  particle.vert  particle.vert.spv
VulkanWrapper/: AccelerationStructure.cpp  AccelerationStructure.h  AppInfo.h  Buffer.cpp  Buffer.h  CMakeLists.txt  CommandPool.cpp  CommandPool.h  ComputePipeline.cpp  ComputePipeline.h  DepthStencilBuffer.cpp  DescriptorPool.cpp  DescriptorSet.cpp  GraphicsPipeline.cpp  GraphicsPipeline.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  IndexBuffer.h  MouseButtonCodes.h  Platform.h  RenderPass.cpp  RenderPass.h  Texture.cpp  Texture.h  VertexBuffer.h  VertexLayout.cpp  VertexLayout.h  VulkanBaseApp.cpp  VulkanBaseApp.h  VulkanDevice.cpp  VulkanHelpers.cpp  VulkanHelpers.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanWrapper.vcxproj  VulkanWrapper.vcxproj.filters  Window.cpp  Window.h  cmake_install.cmake
